--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "flask-migrate",
     "flask-jwt-extended",
     "psycopg2-binary",
-    "gunicorn"
+    "gunicorn",
+    "flask-bcrypt"
 ]
 [tool.pytest]
 minversion = "9.0"
