feat: add flask-marshmallow for API serialization and update user schema

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "flask-jwt-extended",
     "psycopg2-binary",
     "gunicorn",
-    "flask-bcrypt"
+    "flask-bcrypt",
+    "flask-marshmallow"
 ]
 [tool.pytest]
 minversion = "9.0"
