feat: add marshmallow-sqlalchemy for enhanced serialization and update user schema

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "psycopg2-binary",
     "gunicorn",
     "flask-bcrypt",
-    "flask-marshmallow"
+    "flask-marshmallow",
+    "marshmallow-sqlalchemy"
 ]
 [tool.pytest]
 minversion = "9.0"
