feat: add apispec and apispec-webframeworks for API documentation and update user schema

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "gunicorn",
     "flask-bcrypt",
     "flask-marshmallow",
-    "marshmallow-sqlalchemy"
+    "marshmallow-sqlalchemy",
+    "apispec-webframeworks"
 ]
 [tool.pytest]
 minversion = "9.0"
